[web] interviews/workspace: fix workspace description overflow due to scroll area (#1104)

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -13,6 +13,10 @@
   margin-bottom: 2.1333333333333333em;
 }
 
+.prose code {
+  overflow-wrap: anywhere;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
